Changed build path

--- a/expense-tracker-angular/angular.json
+++ b/expense-tracker-angular/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/expense-tracker-angular",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -94,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "889692c4-84d5-4ca1-a0bf-4f8578242f2c"
   }
 }
