--- a/expense-tracker-angular/angular.json
+++ b/expense-tracker-angular/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/firebaseui/dist/firebaseui.css"
             ],
             "scripts": []
           },
@@ -89,7 +90,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/firebaseui/dist/firebaseui.css"
             ],
             "scripts": []
           }
