--- a/expense-tracker-angular/package.json
+++ b/expense-tracker-angular/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "firebase": "^9.22.1",
+    "firebaseui": "^6.0.2",
+    "firebaseui-angular": "^6.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
