--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,10 +17,11 @@ jobs:
 
       - name: Build
         run: npm run build
-        working-directory: ./expense-tracker-angular/dist
+        working-directory: ./expense-tracker-angular
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
+          entryPoint: ./expense-tracker-angular
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EXPENSE_TRACKER_FF7A9 }}'
           projectId: expense-tracker-ff7a9
