--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -28,3 +28,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EXPENSE_TRACKER_FF7A9 }}'
           channelId: live
           projectId: expense-tracker-ff7a9
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
