--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -25,3 +25,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EXPENSE_TRACKER_FF7A9 }}'
           projectId: expense-tracker-ff7a9
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
