--- a/expense-tracker-angular/package.json
+++ b/expense-tracker-angular/package.json
@@ -26,6 +26,7 @@
     "firebaseui": "^6.0.2",
     "firebaseui-angular": "^6.1.3",
     "ng2-charts": "^4.1.1",
+    "ngx-avatar": "^4.1.0",
     "ngx-shimmer-loading": "^0.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
